hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__inarrow_u_6_4@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [25 x i8] c"Can't narrow into bounds\00", align 1

define internal { i1, { i32, ptr }, i16 } @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca { i1, { i32, ptr }, i16 }, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca { i1, { i32, ptr }, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  %upper_bounds_check = icmp ugt i64 %"2_01", 65535, !dbg !16
  %inbounds = xor i1 %upper_bounds_check, true, !dbg !16
  %1 = trunc i64 %"2_01" to i16, !dbg !16
  %2 = insertvalue { i1, { i32, ptr }, i16 } { i1 true, { i32, ptr } poison, i16 poison }, i16 %1, 2, !dbg !16
  %3 = select i1 %inbounds, { i1, { i32, ptr }, i16 } %2, { i1, { i32, ptr }, i16 } { i1 false, { i32, ptr } { i32 2, ptr @0 }, i16 poison }, !dbg !16
  store { i1, { i32, ptr }, i16 } %3, ptr %"4_0", align 8, !dbg !16
  %"4_02" = load { i1, { i32, ptr }, i16 }, ptr %"4_0", align 8
  store { i1, { i32, ptr }, i16 } %"4_02", ptr %"0", align 8
  %"03" = load { i1, { i32, ptr }, i16 }, ptr %"0", align 8
  ret { i1, { i32, ptr }, i16 } %"03"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !15}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, { i32, ptr }, i16 }", file: !2, size: 112, align: 8, elements: !8)
!8 = !{!9, !10, !14}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 96, align: 8, elements: !11)
!11 = !{!12, !13}
!12 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!13 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!14 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
!15 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!16 = !DILocation(line: 27062, column: 402, scope: !3)
